<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".Acerca">

    <ImageButton
        android:id="@+id/voltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:src="@drawable/seta_branca"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/noteboxImg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/notebox" />

    <TextView
        android:id="@+id/AcercaDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/AcercaTexto"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        android:textColor="@color/dirtyWhite"
        app:layout_constraintTop_toBottomOf="@id/noteboxImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="textStart"/>

    <View
        android:id="@+id/linha"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/opaqueSecondary"
        app:layout_constraintTop_toBottomOf="@id/AcercaDesc"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/AcercaVersao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versao"
        android:textColor="@color/dirtyWhite"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/AcercaDesc"
        app:layout_constraintStart_toStartOf="parent" />
    <View
        android:id="@+id/linha1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/opaqueSecondary"
        app:layout_constraintTop_toBottomOf="@id/AcercaVersao"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/AcercaNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textColor="@color/dirtyWhite"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/AcercaVersao"
        app:layout_constraintStart_toEndOf="@id/pessoa_nome" />
    <View
        android:id="@+id/linha2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/opaqueSecondary"
        app:layout_constraintTop_toBottomOf="@id/AcercaNome"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/AcercaNome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome2"
        android:textColor="@color/dirtyWhite"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/AcercaNome"
        app:layout_constraintStart_toEndOf="@id/pessoa_nome2"/>

    <View
        android:id="@+id/linha3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/opaqueSecondary"
        app:layout_constraintTop_toBottomOf="@id/AcercaNome2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/AcercaGit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/git"
        android:textColor="@color/dirtyWhite"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/AcercaNome2"
        app:layout_constraintStart_toEndOf="@id/git_icon"/>

    <View
        android:id="@+id/linha5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/opaqueSecondary"
        app:layout_constraintTop_toBottomOf="@id/AcercaGit"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/linha4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/opaqueSecondary"
        app:layout_constraintBottom_toTopOf="@id/AcercaCopyright"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/AcercaCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor="@color/dirtyWhite"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/git_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/git_icon"
        app:layout_constraintEnd_toStartOf="@id/AcercaGit"
        app:layout_constraintTop_toBottomOf="@id/AcercaNome2" />

    <ImageView
        android:id="@+id/pessoa_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/pessoa"
        app:layout_constraintEnd_toStartOf="@id/AcercaNome"
        app:layout_constraintTop_toBottomOf="@id/AcercaVersao" />

    <ImageView
        android:id="@+id/pessoa_nome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/pessoa"
        app:layout_constraintEnd_toStartOf="@id/AcercaNome2"
        app:layout_constraintTop_toBottomOf="@id/AcercaNome" />

    <TextView
        android:id="@+id/AcercaProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/professores"
        android:textColor="@color/dirtyWhite"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/AcercaGit"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>